--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/node": "^22.16.3",
     "@types/react": "^19.1.8",
+    "@vitejs/plugin-react": "^4.6.0",
     "lz-string": "^1.5.0",
     "react": "^19.1.0",
     "ts-node": "^10.9.2",
