--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^11.10.0",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.16.3",
     "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
     "lz-string": "^1.5.0",
     "react": "^19.1.0",
