--- a/.github/workflows/deplay.yml
+++ b/.github/workflows/deplay.yml
@@ -34,7 +34,13 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Build
-        # Adicione o comando base aqui também, conforme configurado no vite.config.ts
+        env:
+          VITE_FIREBASE_API_KEY: ${{ secrets.VITE_FIREBASE_API_KEY }}
+          VITE_FIREBASE_AUTH_DOMAIN: ${{ secrets.VITE_FIREBASE_AUTH_DOMAIN }}
+          VITE_FIREBASE_PROJECT_ID: ${{ secrets.VITE_FIREBASE_PROJECT_ID }}
+          VITE_FIREBASE_STORAGE_BUCKET: ${{ secrets.VITE_FIREBASE_STORAGE_BUCKET }}
+          VITE_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.VITE_FIREBASE_MESSAGING_SENDER_ID }}
+          VITE_FIREBASE_APP_ID: ${{ secrets.VITE_FIREBASE_APP_ID }}
         run: npm run build -- --base=./ 
       - name: Setup Pages
         uses: actions/configure-pages@v5
